Add load and save model functions

--- a/jupyter/How_to_build_own_text_summarizer_using_deep_learning.ipynb
+++ b/jupyter/How_to_build_own_text_summarizer_using_deep_learning.ipynb
@@ -106,7 +106,7 @@
         "pd.set_option(\"display.max_colwidth\", 200)\n",
         "warnings.filterwarnings(\"ignore\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
       "source": [
         "date_now = datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
       "source": [
         "b_train = False"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
         "        clear_output(wait=True)\n",
         "        print()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -189,7 +189,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,7 +210,7 @@
         "data=pd.read_csv(url,nrows=100000)\n",
         "# data=pd.read_csv(url)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -232,7 +232,7 @@
         "data.drop_duplicates(subset=['Text'],inplace=True)#dropping duplicates\n",
         "data.dropna(axis=0,inplace=True)#dropping na"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -259,7 +259,7 @@
       "source": [
         "data.info()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,7 +299,7 @@
       "source": [
         "data.head()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -467,7 +467,7 @@
         "                           \"you'd\": \"you would\", \"you'd've\": \"you would have\", \"you'll\": \"you will\", \"you'll've\": \"you will have\",\n",
         "                           \"you're\": \"you are\", \"you've\": \"you have\"}"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -530,7 +530,7 @@
         "            long_words.append(i)   \n",
         "    return (\" \".join(long_words)).strip()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -554,7 +554,7 @@
         "for t in data['Text']:\n",
         "    cleaned_text.append(text_cleaner(t,0)) "
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,7 +579,7 @@
       "source": [
         "cleaned_text[:5]  "
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -611,7 +611,7 @@
         "for t in data['Summary']:\n",
         "    cleaned_summary.append(text_cleaner(t,1))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -636,7 +636,7 @@
       "source": [
         "cleaned_summary[:10]"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,7 +671,7 @@
         "data['cleaned_text']=cleaned_text\n",
         "data['cleaned_summary']=cleaned_summary"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -693,7 +693,7 @@
         "data.replace('', np.nan, inplace=True)\n",
         "data.dropna(axis=0,inplace=True)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -736,7 +736,7 @@
         "length_df.hist(bins = 30)\n",
         "plt.show()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -781,7 +781,7 @@
         "        cnt=cnt+1\n",
         "print(cnt/len(data['cleaned_summary']))"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -814,7 +814,7 @@
         "# max_summary_len = 8\n",
         "max_summary_len = 10"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -851,7 +851,7 @@
         "df=pd.DataFrame({'text':short_text,'summary':short_summary,'score':short_score})\n",
         "df=pd.get_dummies(df, columns = ['score'])"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -867,7 +867,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -993,7 +993,7 @@
       "source": [
         "df['summary'] = df['summary'].apply(lambda x : 'sostok '+ x + ' eostok')"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1009,7 +1009,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1134,7 +1134,7 @@
         "x_tr, x_test, y_tr, y_test =train_test_split(np.array(df['text']),np.array(df['summary']),test_size=.2,random_state=0,shuffle=True) \n",
         "x_tr, x_val, y_tr, y_val =train_test_split(x_tr,y_tr,test_size=.2,random_state=0,shuffle=True) "
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1161,7 +1161,7 @@
         "x_tokenizer = Tokenizer() \n",
         "x_tokenizer.fit_on_texts(list(x_tr))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1205,7 +1205,7 @@
         "print(\"% of rare words in vocabulary:\",(cnt/tot_cnt)*100)\n",
         "print(\"Total Coverage of rare words:\",(freq/tot_freq)*100)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1259,7 +1259,7 @@
         "#size of vocabulary ( +1 for padding token)\n",
         "x_voc   =  x_tokenizer.num_words + 1"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1275,7 +1275,7 @@
       "source": [
         "x_voc"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1311,7 +1311,7 @@
         "y_tokenizer = Tokenizer()   \n",
         "y_tokenizer.fit_on_texts(list(y_tr))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1355,7 +1355,7 @@
         "print(\"% of rare words in vocabulary:\",(cnt/tot_cnt)*100)\n",
         "print(\"Total Coverage of rare words:\",(freq/tot_freq)*100)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1400,7 +1400,7 @@
         "#size of vocabulary\n",
         "y_voc = y_tokenizer.num_words +1 # +1 per il padding 0!"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1425,7 +1425,7 @@
       "source": [
         "y_tokenizer.word_counts['sostok'],len(y_tr)   "
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1469,7 +1469,7 @@
         "y_tr=np.delete(y_tr,ind, axis=0)\n",
         "x_tr=np.delete(x_tr,ind, axis=0)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1491,7 +1491,7 @@
         "y_val = np.delete(y_val,ind, axis=0)\n",
         "x_val = np.delete(x_val,ind, axis=0)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1512,7 +1512,7 @@
         "y_test = np.delete(y_test,ind, axis=0)\n",
         "x_test = np.delete(x_test,ind, axis=0)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1523,19 +1523,48 @@
       "source": [
         "# Model building\n",
         "\n",
-        "We are finally at the model building part. But before we do that, we need to familiarize ourselves with a few terms which are required prior to building the model.\n",
-        "\n",
-        "**Return Sequences = True**: When the return sequences parameter is set to True, LSTM produces the hidden state and cell state for every timestep\n",
-        "\n",
-        "**Return State = True**: When return state = True, LSTM produces the hidden state and cell state of the last timestep only\n",
-        "\n",
-        "**Initial State**: This is used to initialize the internal states of the LSTM for the first timestep\n",
-        "\n",
-        "**Stacked LSTM**: Stacked LSTM has multiple layers of LSTM stacked on top of each other. \n",
-        "This leads to a better representation of the sequence. I encourage you to experiment with the multiple layers of the LSTM stacked on top of each other (it’s a great way to learn this)\n",
-        "\n",
-        "Here, we are building a 3 stacked LSTM for the encoder:"
+        "Here we have all the functions used to create and use the models."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v91m3mAqZj60"
+      },
+      "source": [
+        "## Help functions\n",
+        "\n",
+        "This cell holds all the utilities we'll need to work on a general model."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B70omdVWZtg4"
+      },
+      "source": [
+        "import os\n",
+        "\n",
+        "def save_model(model):\n",
+        "  path = \"./saved_models/\" + model.name + \"/ckpt\"\n",
+        "  if not os.path.isdir(path):\n",
+        "    try:\n",
+        "      os.mkdir(path)\n",
+        "    except OSError:\n",
+        "      print(\"Creation of the directory %s failed\" % path)\n",
+        "    else:\n",
+        "      print(\"Successfully created the directory %s \" % path)\n",
+        "  model.save_weights(path)\n",
+        "\n",
+        "def load_model(model):\n",
+        "  path = \"./saved_models/\" + model.name + \"/ckpt\"\n",
+        "  if os.path.isdir(path): \n",
+        "    model.load_weights(path)\n",
+        "  else:\n",
+        "    print(\"No supported path found\")"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1672,7 +1701,7 @@
         "            tf.TensorShape((input_shape[1][0], input_shape[1][1], input_shape[0][1]))\n",
         "        ]"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1757,13 +1786,14 @@
         "decoder_outputs = decoder_dense(decoder_concat_input)\n",
         "\n",
         "# Define the model \n",
-        "model = Model([encoder_inputs, decoder_inputs], decoder_outputs)\n",
+        "model_lstm = Model([encoder_inputs, decoder_inputs], decoder_outputs, \n",
+        "                   name = \"model_lstm\")\n",
         "\n",
-        "model.summary() \n",
+        "model_lstm.summary() \n",
         "\n",
         "# Compile the model using Adam as the optimizer and \n",
         "# sparse categorical crossentropy as the loss function\n",
-        "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy')\n",
+        "model_lstm.compile(optimizer='adam', loss='sparse_categorical_crossentropy')\n",
         "\n",
         "# Let's stop the training as soon as it hits a minimum\n",
         "es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=2)\n",
@@ -1777,12 +1807,12 @@
         "is_model_lstm_trained = True\n",
         "\n",
         "if not is_model_lstm_trained:\n",
-        "    history=model.fit([x_tr,y_tr[:,:-1]], \n",
-        "                      y_tr.reshape(y_tr.shape[0],y_tr.shape[1], 1)[:,1:],\n",
-        "                      epochs=50,\n",
-        "                      callbacks=[es,tb],\n",
-        "                      batch_size=128, \n",
-        "                      validation_data=([x_val,y_val[:,:-1]], y_val.reshape(y_val.shape[0],y_val.shape[1], 1)[:,1:]))"
+        "    history=model_lstm.fit([x_tr,y_tr[:,:-1]], \n",
+        "                           y_tr.reshape(y_tr.shape[0],y_tr.shape[1], 1)[:,1:],\n",
+        "                           epochs=50,\n",
+        "                           callbacks=[es,tb],\n",
+        "                           batch_size=128, \n",
+        "                           validation_data=([x_val,y_val[:,:-1]], y_val.reshape(y_val.shape[0],y_val.shape[1], 1)[:,1:]))"
       ],
       "execution_count": null,
       "outputs": []
@@ -1829,7 +1859,7 @@
         "    [decoder_inputs] + [decoder_hidden_state_input,decoder_state_input_h, decoder_state_input_c],\n",
         "    [decoder_outputs2] + [state_h2, state_c2])"
       ],
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1848,9 +1878,9 @@
       },
       "source": [
         "if not is_model_lstm_trained:\n",
-        "    model_lstm.save_weights(\"./saved_models/summary_net_lstm/ckpt\")\n",
+        "  save_model(model_lstm)\n",
         "else:\n",
-        "    model_lstm.load_weights(\"./saved_models/summary_net_lstm/ckpt\")"
+        "  load_model(model_lstm)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1934,7 +1964,8 @@
         "decoder_outputs = decoder_dense(decoder_concat_input)\n",
         "\n",
         "# Define the model \n",
-        "model_gru = Model([encoder_inputs, decoder_inputs], decoder_outputs)\n",
+        "model_gru = Model([encoder_inputs, decoder_inputs], decoder_outputs,\n",
+        "                  name = \"model_gru\")\n",
         "\n",
         "model_gru.summary() \n",
         "\n",
@@ -1949,7 +1980,7 @@
         "if not is_model_gru_trained:\n",
         "    history=model_gru.fit([x_tr,y_tr[:,:-1]], y_tr.reshape(y_tr.shape[0],y_tr.shape[1], 1)[:,1:] ,epochs=50,callbacks=[es,tb],batch_size=128, validation_data=([x_val,y_val[:,:-1]], y_val.reshape(y_val.shape[0],y_val.shape[1], 1)[:,1:]))"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2033,7 +2064,7 @@
         "    [decoder_inputs] + [decoder_hidden_state_input,decoder_state_input],\n",
         "    [decoder_outputs2] + [state_2])"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2052,9 +2083,9 @@
       },
       "source": [
         "if not is_model_gru_trained:\n",
-        "    model_gru.save_weights(\"./saved_models/summary_net_gru/ckpt\")\n",
+        "  save_model(model_gru)\n",
         "else:\n",
-        "    model_gru.load_weights(\"./saved_models/summary_net_gru/ckpt\")"
+        "  load_model(model_gru)"
       ],
       "execution_count": null,
       "outputs": []
@@ -2125,7 +2156,8 @@
         "decoder_outputs = decoder_dense(decoder_concat_input)\n",
         "\n",
         "# Define the model \n",
-        "model_bi = Model([encoder_inputs, decoder_inputs], decoder_outputs)\n",
+        "model_bi = Model([encoder_inputs, decoder_inputs], decoder_outputs,\n",
+        "                 name = \"model_bi\")\n",
         "\n",
         "model_bi.summary() \n",
         "\n",
@@ -2210,9 +2242,9 @@
       },
       "source": [
         "if not is_model_bi_trained:\n",
-        "    model_bi.save_weights(\"./saved_models/summary_net_bi/ckpt\")\n",
+        "  save_model(model_bi)\n",
         "else:\n",
-        "    model_bi.load_weights(\"./saved_models/summary_net_bi/ckpt\")"
+        "  load_model(model_bi)"
       ],
       "execution_count": null,
       "outputs": []
