Completamento sistema di valutazione.

--- a/How_to_build_own_text_summarizer_using_deep_learning.ipynb
+++ b/How_to_build_own_text_summarizer_using_deep_learning.ipynb
@@ -2207,7 +2207,20 @@
       "source": [
         "#[:,:-1]\n",
         "if b_train:\n",
-        "    rating_model.fit(x_tr_sent[:,:], y_tr_sent, batch_size=128, validation_data=(x_val_sent[:,:], y_val_sent), epochs = 25, callbacks=[earlystop, tb])"
+        "    history=rating_model.fit(x_tr_sent[:,:], y_tr_sent, batch_size=128, validation_data=(x_val_sent[:,:], y_val_sent), epochs = 25, callbacks=[earlystop, tb])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "if b_train:\n",
+        "    pyplot.plot(history.history['loss'], label='train')\n",
+        "    pyplot.plot(history.history['val_loss'], label='test')\n",
+        "    pyplot.legend()\n",
+        "    pyplot.show()"
       ]
     },
     {
@@ -2423,7 +2436,7 @@
       "outputs": [],
       "source": [
         "if b_train:\n",
-        "    sentiment_model.fit(x_tr_sent[:,:], k_tr_sent, batch_size=128, validation_data=(x_val_sent[:,:], k_val_sent), epochs = 25, callbacks=[earlystop, tb])"
+        "    history=sentiment_model.fit(x_tr_sent[:,:], k_tr_sent, batch_size=128, validation_data=(x_val_sent[:,:], k_val_sent), epochs = 25, callbacks=[earlystop, tb])"
       ]
     },
     {
@@ -2432,7 +2445,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# %tensorboard --logdir tb_dir"
+        "if b_train:\n",
+        "    pyplot.plot(history.history['loss'], label='train')\n",
+        "    pyplot.plot(history.history['val_loss'], label='test')\n",
+        "    pyplot.legend()\n",
+        "    pyplot.show()"
       ]
     },
     {
@@ -2628,7 +2645,20 @@
       "outputs": [],
       "source": [
         "if b_train:\n",
-        "    sentiment_gru_model.fit(x_tr_sent[:,:], k_tr_sent, batch_size=128, validation_data=(x_val_sent[:,:], k_val_sent), epochs = 25, callbacks=[earlystop, tb])"
+        "    history=sentiment_gru_model.fit(x_tr_sent[:,:], k_tr_sent, batch_size=128, validation_data=(x_val_sent[:,:], k_val_sent), epochs = 25, callbacks=[earlystop, tb])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "if b_train:\n",
+        "    pyplot.plot(history.history['loss'], label='train')\n",
+        "    pyplot.plot(history.history['val_loss'], label='test')\n",
+        "    pyplot.legend()\n",
+        "    pyplot.show()"
       ]
     },
     {
