Fix save-load model

--- a/How_to_build_own_text_summarizer_using_deep_learning.ipynb
+++ b/How_to_build_own_text_summarizer_using_deep_learning.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "How_to_build_own_text_summarizer_using_deep_learning.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "language_info": {
       "name": "python",
@@ -107,7 +108,7 @@
         "pd.set_option(\"display.max_colwidth\", 200)\n",
         "warnings.filterwarnings(\"ignore\")"
       ],
-      "execution_count": 13,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -139,7 +140,7 @@
         "        clear_output(wait=True)\n",
         "        print()"
       ],
-      "execution_count": 14,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -162,18 +163,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "67ad09d7-9194-4829-90b5-856747fc7c74"
+        "outputId": "aca46c05-fe0c-433a-b48e-45ae21141e04"
       },
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')"
       ],
-      "execution_count": 15,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -185,11 +186,12 @@
         "id": "Iafz5ZXoBEru"
       },
       "source": [
-        "url=\"/content/drive/MyDrive/Colab Notebooks/Reviews.csv\"\n",
+        "# url=\"/content/drive/MyDrive/Colab Notebooks/Reviews.csv\"\n",
+        "url=\"./dataset/Reviews.csv\"\n",
         "data=pd.read_csv(url,nrows=100000)\n",
         "# data=pd.read_csv(url)"
       ],
-      "execution_count": 16,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -211,7 +213,7 @@
         "data.drop_duplicates(subset=['Text'],inplace=True)#dropping duplicates\n",
         "data.dropna(axis=0,inplace=True)#dropping na"
       ],
-      "execution_count": 17,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -233,12 +235,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "72104ba5-ced4-44da-ffd6-dd89f2509ee1"
+        "outputId": "0af1030b-fbab-4a14-b4ad-c43c2b555e2c"
       },
       "source": [
         "data.info()"
       ],
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,14 +273,14 @@
         "id": "qoixQBFE1TGI",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 255
+          "height": 289
         },
-        "outputId": "d3f608fc-dea7-430e-a0fb-a1662766b93c"
+        "outputId": "ae07ccdb-e9c3-4fe3-9d8d-357685080eae"
       },
       "source": [
         "data.head()"
       ],
-      "execution_count": 19,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,7 +400,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 7
         }
       ]
     },
@@ -446,7 +448,7 @@
         "                           \"you'd\": \"you would\", \"you'd've\": \"you would have\", \"you'll\": \"you will\", \"you'll've\": \"you will have\",\n",
         "                           \"you're\": \"you are\", \"you've\": \"you have\"}"
       ],
-      "execution_count": 20,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -484,7 +486,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "93d58d27-e1fd-4bec-9699-7b71208e6813"
+        "outputId": "7e74f963-c387-4c10-8463-dcb411825449"
       },
       "source": [
         "nltk.download('stopwords')\n",
@@ -509,13 +511,13 @@
         "            long_words.append(i)   \n",
         "    return (\" \".join(long_words)).strip()"
       ],
-      "execution_count": 21,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
           ],
           "name": "stdout"
         }
@@ -533,7 +535,7 @@
         "for t in data['Text']:\n",
         "    cleaned_text.append(text_cleaner(t,0)) "
       ],
-      "execution_count": 22,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -553,12 +555,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6d59fe6f-7fe4-4f34-8dbe-7dd3989c02d1"
+        "outputId": "ec718ca0-4088-411f-fb5a-e4d955ce9166"
       },
       "source": [
         "cleaned_text[:5]  "
       ],
-      "execution_count": 23,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,7 +576,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 11
         }
       ]
     },
@@ -590,7 +592,7 @@
         "for t in data['Summary']:\n",
         "    cleaned_summary.append(text_cleaner(t,1))"
       ],
-      "execution_count": 24,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -610,12 +612,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8a27f2b2-a956-4718-d38a-7fa7dddbac18"
+        "outputId": "23e42549-650a-4c74-8870-3aa7372be194"
       },
       "source": [
         "cleaned_summary[:10]"
       ],
-      "execution_count": 25,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +638,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 13
         }
       ]
     },
@@ -650,7 +652,7 @@
         "data['cleaned_text']=cleaned_text\n",
         "data['cleaned_summary']=cleaned_summary"
       ],
-      "execution_count": 26,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -672,7 +674,7 @@
         "data.replace('', np.nan, inplace=True)\n",
         "data.dropna(axis=0,inplace=True)"
       ],
-      "execution_count": 27,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -695,7 +697,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 281
         },
-        "outputId": "1c7c6cc5-9cac-4d2a-a7d6-12abe89a39d5"
+        "outputId": "a54044e7-4613-406f-ce76-c68d01c55e14"
       },
       "source": [
         "text_word_count = []\n",
@@ -713,7 +715,7 @@
         "length_df.hist(bins = 30)\n",
         "plt.show()"
       ],
-      "execution_count": 28,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -749,7 +751,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "52e1002a-14b0-452e-b7ad-6e865391cef6"
+        "outputId": "2f1df69a-6a4a-47b5-9a0c-860d07604976"
       },
       "source": [
         "cnt=0\n",
@@ -758,7 +760,7 @@
         "        cnt=cnt+1\n",
         "print(cnt/len(data['cleaned_summary']))"
       ],
-      "execution_count": 29,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -791,7 +793,7 @@
         "# max_summary_len = 8\n",
         "max_summary_len = 10"
       ],
-      "execution_count": 30,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -828,7 +830,7 @@
         "df=pd.DataFrame({'text':short_text,'summary':short_summary,'score':short_score})\n",
         "df=pd.get_dummies(df, columns = ['score'])"
       ],
-      "execution_count": 31,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -839,12 +841,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "114db2ff-a4e7-4d76-d040-d9caec840e08"
+        "outputId": "cca5b1b5-7013-4bc3-d4bd-2cf1307c5c05"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 32,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -946,7 +948,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 20
         }
       ]
     },
@@ -970,7 +972,7 @@
       "source": [
         "df['summary'] = df['summary'].apply(lambda x : 'sostok '+ x + ' eostok')"
       ],
-      "execution_count": 33,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -981,12 +983,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "46eba69b-4dec-4cf1-b7cd-9377cbf294cc"
+        "outputId": "15a4e00c-5a7b-4a96-826d-c77857dc6172"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 34,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1088,7 +1090,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 22
         }
       ]
     },
@@ -1111,7 +1113,7 @@
         "x_tr, x_test, y_tr, y_test =train_test_split(np.array(df['text']),np.array(df['summary']),test_size=.2,random_state=0,shuffle=True) \n",
         "x_tr, x_val, y_tr, y_val =train_test_split(x_tr,y_tr,test_size=.2,random_state=0,shuffle=True) "
       ],
-      "execution_count": 35,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1138,7 +1140,7 @@
         "x_tokenizer = Tokenizer() \n",
         "x_tokenizer.fit_on_texts(list(x_tr))"
       ],
-      "execution_count": 36,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1162,7 +1164,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c895fad-f19f-4a8b-c6ed-421892728c52"
+        "outputId": "b69edeb1-949c-4dea-e7e9-865d3e91a383"
       },
       "source": [
         "thresh=4\n",
@@ -1182,7 +1184,7 @@
         "print(\"% of rare words in vocabulary:\",(cnt/tot_cnt)*100)\n",
         "print(\"Total Coverage of rare words:\",(freq/tot_freq)*100)"
       ],
-      "execution_count": 37,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1236,7 +1238,7 @@
         "#size of vocabulary ( +1 for padding token)\n",
         "x_voc   =  x_tokenizer.num_words + 1"
       ],
-      "execution_count": 38,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1247,12 +1249,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b8f19526-d9e7-405c-9097-65fe6ed7724f"
+        "outputId": "3bbdea87-2f68-41bc-d518-62acd8358c0f"
       },
       "source": [
         "x_voc"
       ],
-      "execution_count": 39,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1264,7 +1266,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 27
         }
       ]
     },
@@ -1288,7 +1290,7 @@
         "y_tokenizer = Tokenizer()   \n",
         "y_tokenizer.fit_on_texts(list(y_tr))"
       ],
-      "execution_count": 40,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1312,7 +1314,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "11eeb6f1-3a02-4c72-9e29-1764c3c9c224"
+        "outputId": "5176f4c1-d6cf-461a-8e53-683a9fc197c0"
       },
       "source": [
         "thresh=6\n",
@@ -1332,7 +1334,7 @@
         "print(\"% of rare words in vocabulary:\",(cnt/tot_cnt)*100)\n",
         "print(\"Total Coverage of rare words:\",(freq/tot_freq)*100)"
       ],
-      "execution_count": 41,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1377,7 +1379,7 @@
         "#size of vocabulary\n",
         "y_voc = y_tokenizer.num_words +1 # +1 per il padding 0!"
       ],
-      "execution_count": 42,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1397,12 +1399,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "21eed880-d7bf-4a79-938c-f8103246faf6"
+        "outputId": "1f7e0c36-fe5d-4197-b466-64d8503d44eb"
       },
       "source": [
         "y_tokenizer.word_counts['sostok'],len(y_tr)   "
       ],
-      "execution_count": 43,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1414,7 +1416,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 31
         }
       ]
     },
@@ -1446,7 +1448,7 @@
         "y_tr=np.delete(y_tr,ind, axis=0)\n",
         "x_tr=np.delete(x_tr,ind, axis=0)"
       ],
-      "execution_count": 44,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1468,7 +1470,7 @@
         "y_val = np.delete(y_val,ind, axis=0)\n",
         "x_val = np.delete(x_val,ind, axis=0)"
       ],
-      "execution_count": 45,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1489,7 +1491,7 @@
         "y_test = np.delete(y_test,ind, axis=0)\n",
         "x_test = np.delete(x_test,ind, axis=0)"
       ],
-      "execution_count": 46,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1525,26 +1527,28 @@
         "import os\n",
         "\n",
         "def save_model(model):\n",
-        "  # path = \"./saved_models/\" + model.name + \"/ckpt\"\n",
-        "  # if not os.path.isdir(path):\n",
-        "  #   try:\n",
-        "  #     os.mkdir(path)\n",
-        "  #   except OSError:\n",
-        "  #     print(\"Creation of the directory %s failed\" % path)\n",
-        "  #   else:\n",
-        "  #     print(\"Successfully created the directory %s \" % path)\n",
-        "  # model.save_weights(path)\n",
-        "  # print(\"Model saved succesfully!\")\n",
-        "  return\n",
+        "  path = \"./saved_models/\" + model.name + \"/ckpt\"\n",
+        "  \n",
+        "  if not os.path.exists(os.path.dirname(path)):\n",
+        "    try:\n",
+        "      os.mkdir(path)\n",
+        "    except OSError:\n",
+        "      print(\"Creation of the directory %s failed\" % path)\n",
+        "    else:\n",
+        "      print(\"Successfully created the directory %s \" % path)\n",
+        "  model.save_weights(path)\n",
+        "  print(\"Model saved succesfully!\")\n",
         "\n",
         "def load_model(model):\n",
         "  path = \"./saved_models/\" + model.name + \"/ckpt\"\n",
-        "  if os.path.isdir(path): \n",
+        "\n",
+        "  if os.path.exists(os.path.dirname(path)): \n",
         "    model.load_weights(path)\n",
+        "    print(\"Model loaded\")\n",
         "  else:\n",
         "    print(\"No supported path found\")"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1777,10 +1781,10 @@
       "metadata": {
         "trusted": true,
         "id": "zXef38nBFxir",
-        "outputId": "505ff72f-da60-4afe-86f6-a4a65e30dbec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "505ff72f-da60-4afe-86f6-a4a65e30dbec"
       },
       "source": [
         "from tensorflow.keras import backend as K \n",
@@ -2032,10 +2036,10 @@
       "metadata": {
         "trusted": true,
         "id": "H8ZtJ9NT3rez",
-        "outputId": "ed39145a-c6d2-426d-be2e-68cb0ce638f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ed39145a-c6d2-426d-be2e-68cb0ce638f6"
       },
       "source": [
         "from tensorflow.keras import backend as K \n",
@@ -2263,10 +2267,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "NW5-bvpD7WqN",
-        "outputId": "2e2cb080-bfc8-4b9a-c119-e76c95b884e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2e2cb080-bfc8-4b9a-c119-e76c95b884e8"
       },
       "source": [
         "from tensorflow.keras import backend as K \n",
@@ -2743,10 +2747,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bQva9Fkb1TGd",
-        "outputId": "36132f9f-9833-4d02-d35b-be5c088e5bfb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "36132f9f-9833-4d02-d35b-be5c088e5bfb"
       },
       "source": [
         "verbose = True\n",
